--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@ a{
 a:hover,a:focus{
     color:#592059;
   }
-#banner .container, 
-main header, 
-#portfolio .grid, 
+#banner .container,
+main header,
+#portfolio .grid,
 #contact>div,
 footer #footer-above{
   display:-webkit-box;
@@ -35,7 +35,7 @@ footer #footer-above{
   -webkit-box-align:start;
       -ms-flex-align:start;
           align-items:flex-start;
-  margin:0 auto; 
+  margin:0 auto;
 }
 #banner{
   background-color:#722872 !important;
@@ -124,11 +124,16 @@ main header{
     -ms-flex-line-pack:distribute;
         align-content:space-around;
   }
+.header_picture{
+  width: 100%;
+  
+}
 @media(min-width:1023px){
 main header{
       padding:50px 30px
   }
     }
+
 main header img{
       border-radius:50%;
       margin:30px 0 10px;
@@ -175,7 +180,7 @@ main section#contact>div>div{
 #portfolio .grid{
 	padding:0;
 	max-width:90%;
-	list-style:none; 
+	list-style:none;
 	margin-top:20px;
 }
 #portfolio .grid li{
@@ -188,7 +193,7 @@ main section#contact>div>div{
   }
     }
 #portfolio img{
-  
+
 	max-width:100%;
 	height:auto;
 	display:block;
@@ -302,12 +307,12 @@ footer h3{
   }
 .scroll-top{
   z-index:1049;
-  position:fixed; 
+  position:fixed;
   visibility:visible;
   bottom:2%;right:2%;
 }
 .scroll-top a{
-    background:#722872;  
+    background:#722872;
   }
 .scroll-top a:hover, .scroll-top a:focus{
       color:#722872;
@@ -316,7 +321,7 @@ footer h3{
     }
 @media(min-width:768px){
 .scroll-top a{
-      visibility:hidden  
+      visibility:hidden
   }
     }
 hr.star-bright, hr.star-dark{
