--- a/css/style.css
+++ b/css/style.css
@@ -113,16 +113,12 @@ main >*:not(.scroll-top){
     -webkit-box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.2);
             box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.2);
   }
-main header{
+#main_header{
     background:#aaa;
     color:#fff;
     text-align:right;
     padding:70px 10% 50px;
-    -webkit-box-align:end;
-        -ms-flex-align:end;
-            align-items:flex-end;
-    -ms-flex-line-pack:distribute;
-        align-content:space-around;
+  
   }
 .header_picture{
   width: 100%;
@@ -131,7 +127,6 @@ main header{
 main header{
       padding:50px 30px
   }
-    }
 
 main header img{
     }
