--- a/css/style.css
+++ b/css/style.css
@@ -118,11 +118,14 @@ main >*:not(.scroll-top){
     color:#fff;
     text-align:right;
     padding:70px 10% 50px;
-  
+
   }
 .header_picture{
   width: 100%;
-
+  float:left;
+}
+.header_picture{
+  float:right;
 }
 main header{
       padding:50px 30px
