--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ main >*:not(.scroll-top){
     -webkit-box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.2);
             box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.2);
   }
-#main_header{
+.main_header{
     background:#aaa;
     color:#fff;
     text-align:right;
@@ -124,15 +124,7 @@ main >*:not(.scroll-top){
   width: 100%;
   float:left;
 }
-.main header{
-      padding:50px 30px
-  }
 
-main header .intro-text{
-    max-width:675px;
-    text-align:center;
-    margin-bottom:30px;
-  }
 main section{
     background:#eee;
     padding:40px 0;
