--- a/css/style.css
+++ b/css/style.css
@@ -116,12 +116,12 @@ main >*:not(.scroll-top){
 .main_header{
     background:#aaa;
     color:#fff;
-    text-align:right;
+    text-align:center;
     padding:70px 10% 50px;
 
   }
 .header_picture{
-  width: 100%;
+  max-width: 100%;
   float:left;
 }
 
