--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@ a{
 a:hover,a:focus{
     color:#592059;
   }
-#banner .container, 
-main header, 
-#portfolio .grid, 
+#banner .container,
+main header,
+#portfolio .grid,
 #contact>div,
 footer #footer-above{
   display:-webkit-box;
@@ -35,7 +35,7 @@ footer #footer-above{
   -webkit-box-align:start;
       -ms-flex-align:start;
           align-items:flex-start;
-  margin:0 auto; 
+  margin:0 auto;
 }
 #banner{
   background-color:#722872 !important;
@@ -108,48 +108,33 @@ nav{
   display:block;
 }
 main >*:not(.scroll-top){
-    max-width:1024px;
+    /*max-width:1024px;*/
     margin:0 auto;
     -webkit-box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.2);
             box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.2);
   }
-main header{
+#main_header{
     background:#aaa;
     color:#fff;
     text-align:right;
     padding:70px 10% 50px;
-    -webkit-box-align:end;
-        -ms-flex-align:end;
-            align-items:flex-end;
-    -ms-flex-line-pack:distribute;
-        align-content:space-around;
+
   }
-@media(min-width:1023px){
+.header_picture{
+  width: 100%;
+
+}
 main header{
       padding:50px 30px
   }
-    }
+
 main header img{
-      border-radius:50%;
-      margin:30px 0 10px;
-      max-width:80%;
-      height:auto;
-      width:250px;
     }
 main header .intro-text{
     max-width:675px;
     text-align:center;
     margin-bottom:30px;
   }
-@media(min-width:1023px){
-main header .intro-text{
-      text-align:right;
-      width:610px
-  }
-    }
-main header .intro-text .skills{
-      font-size:1.15em;
-    }
 main section{
     background:#eee;
     padding:40px 0;
@@ -175,7 +160,7 @@ main section#contact>div>div{
 #portfolio .grid{
 	padding:0;
 	max-width:90%;
-	list-style:none; 
+	list-style:none;
 	margin-top:20px;
 }
 #portfolio .grid li{
@@ -188,7 +173,7 @@ main section#contact>div>div{
   }
     }
 #portfolio img{
-  
+
 	max-width:100%;
 	height:auto;
 	display:block;
@@ -302,12 +287,12 @@ footer h3{
   }
 .scroll-top{
   z-index:1049;
-  position:fixed; 
+  position:fixed;
   visibility:visible;
   bottom:2%;right:2%;
 }
 .scroll-top a{
-    background:#722872;  
+    background:#722872;
   }
 .scroll-top a:hover, .scroll-top a:focus{
       color:#722872;
@@ -316,7 +301,7 @@ footer h3{
     }
 @media(min-width:768px){
 .scroll-top a{
-      visibility:hidden  
+      visibility:hidden
   }
     }
 hr.star-bright, hr.star-dark{
@@ -358,4 +343,20 @@ hr.star-dark{
 hr.star-dark:after{
       color:#888;
       background-color:#eee;
+    }
+
+#myCarousel {
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding-bottom: auto;
+      margin-top: -25px;
+      height: 40%;
+      width: 100%;
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+
+    .carousel-caption{
+      top: 30%;
     }
